login and register page added

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -20,6 +20,7 @@
         </tr>
         </thead>
         <tbody>
+            <% console.log('eww',todos) %>
         <% for (let i = 0; i < todos.length; i++) { %>
             <tr>
                 <td><%= i + 1 %></td>
