--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -42,5 +42,11 @@
     </label>
     <button type="submit" class="add-btn">Add</button>
 </form>
+
+<form action="/logout" method="GET" autocomplete="off" >
+	<div class="logout-middle">
+		<button type="submit" class="logout-btn">Logout</button>
+	</div>
+</form>
 </body>
 </html>
