--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -20,7 +20,13 @@
     <input type="password" placeholder="Enter Password" name="password" id="password" required>
 
     <hr>
-
+    <div class="new">
+        <span>New to the project</span>
+        <a  href="./registration" >
+            <span class="signUp">Sign Up</span>
+        </a>
+       
+    </div>
 
     <button type="submit" class="add-btn">Login</button>
 </form>
