--- a/views/pages/registration.ejs
+++ b/views/pages/registration.ejs
@@ -24,7 +24,13 @@
         <label for="confirmPassword"><b>Confirm Password</b></label>
         <input type="password" placeholder="Repeat Password" name="confirmPassword" id="confirmPassword" required>
         <hr>
-
+        <div class="new">
+            <span>Already Have an Account</span>
+            <a  href="./login" >
+                <span class="signUp">Login</span>
+            </a>
+           
+        </div>
 
         <button type="submit" class="add-btn">Register</button>
     </form>
